--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,8 @@
-idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(
+        SRCS
+            "soul_main.cpp"
+            "uart_manager.cpp" "uart_manager.hpp"
+
+        INCLUDE_DIRS
+            "."
+)
