--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -2,6 +2,7 @@ idf_component_register(
         SRCS
             "soul_main.cpp"
             "uart_manager.cpp" "uart_manager.hpp"
+            "storage_manager.cpp" "storage_manager.hpp"
 
         INCLUDE_DIRS
             "."
